--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.23.0",
     "firebase": "^8.3.1",
     "node-sass": "^6.0.1",
+    "qrcode": "^1.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/qrcode": "^1.4.1",
     "@types/react-redux": "^7.1.19",
     "@types/react-router-dom": "^5.3.1",
     "@types/redux": "^3.6.0",
